zellij-utils/src/snapshots/zellij_utils__setup__setup_test__default_config_with_no_cli_arguments-2.snap
---
source: zellij-utils/src/setup.rs
assertion_line: 583
expression: "format!(\"{:#?}\", layout)"
---
Layout {
    tabs: [],
    focused_tab_index: None,
    template: Some(
        PaneLayout {
            children_split_direction: Horizontal,
            name: None,
            children: [
                PaneLayout {
                    children_split_direction: Horizontal,
                    name: None,
                    children: [],
                    split_size: Some(
                        Fixed(
                            1,
                        ),
                    ),
                    run: Some(
                        Plugin(
                            RunPlugin {
                                _allow_exec_host_cmd: false,
                                location: Zellij(
                                    PluginTag(
                                        "tab-bar",
                                    ),
                                ),
                            },
                        ),
                    ),
                    borderless: true,
                    focus: None,
                    external_children_index: None,
                },
                PaneLayout {
                    children_split_direction: Horizontal,
                    name: None,
                    children: [],
                    split_size: None,
                    run: None,
                    borderless: false,
                    focus: None,
                    external_children_index: None,
                },
                PaneLayout {
                    children_split_direction: Horizontal,
                    name: None,
                    children: [],
                    split_size: Some(
                        Fixed(
                            2,
                        ),
                    ),
                    run: Some(
                        Plugin(
                            RunPlugin {
                                _allow_exec_host_cmd: false,
                                location: Zellij(
                                    PluginTag(
                                        "status-bar",
                                    ),
                                ),
                            },
                        ),
                    ),
                    borderless: true,
                    focus: None,
                    external_children_index: None,
                },
            ],
            split_size: None,
            run: None,
            borderless: false,
            focus: None,
            external_children_index: None,
        },
    ),
    floating_panes_template: [],
}
