zellij-utils/src/snapshots/zellij_utils__setup__setup_test__layout_options_override_config_options-2.snap
---
source: zellij-utils/src/setup.rs
assertion_line: 608
expression: "format!(\"{:#?}\", layout)"
---
Layout {
    tabs: [],
    focused_tab_index: None,
    template: Some(
        PaneLayout {
            children_split_direction: Horizontal,
            name: None,
            children: [],
            split_size: None,
            run: None,
            borderless: false,
            focus: None,
            external_children_index: None,
        },
    ),
    floating_panes_template: [],
}
